Add Vue to Phoenix interface app

--- a/apps/interface/package.json
+++ b/apps/interface/package.json
@@ -7,14 +7,18 @@
   },
   "dependencies": {
     "phoenix": "file:../../deps/phoenix",
-    "phoenix_html": "file:../../deps/phoenix_html"
+    "phoenix_html": "file:../../deps/phoenix_html",
+    "vue": "^2.1.10"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "brunch": "2.7.4",
     "clean-css-brunch": "~2.0.0",
     "css-brunch": "~2.0.0",
     "javascript-brunch": "~2.0.0",
-    "uglify-js-brunch": "~2.0.1"
+    "node-sass": "^4.5.0",
+    "uglify-js-brunch": "~2.0.1",
+    "vue-brunch": "^2.0.1"
   }
 }
